crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__number__nan_equality.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/number/nan_equality.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var nan @1 (/ 0.0 0.0))
   (print (== (local nan @1) 0.0))
   (print (!= (local nan @1) 1.0))
   (print (== (local nan @1) (local nan @1)))
   (print (!= (local nan @1) (local nan @1))))

----- stderr -----
